# linear_regression-main

./: README.md  pyproject.toml  requirements.txt
app/: main.py  nba_client.py  schemas.py
src/app/: main.py  model.py  nba_client.py
src/linear_regression_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_model.py
typings/balldontlie/: __init__.pyi  base.pyi  client.pyi  exceptions.pyi
typings/balldontlie/nba/: api.pyi  models.pyi
