[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linear-regression-api"
version = "0.1.0"
description = "Production-ready FastAPI service to predict NBA player scoring improvement"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn==0.32.1",
  "pandas==2.2.3",
  "scikit-learn==1.5.2",
  "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
